@startuml archi-diagram-v8

' Layers
package "API Layer" {
    class PropertyController
    class InvestmentController
    class UserController
    class WalletController
}

package "Microservices" {
    package "Property Service" {
        class PropertyService {
            + listOpenForFunding(): List<Property>
            + listAllProperties(userRole: String): List<Property>
            + distributeRentalIncome(): void
        }
        class PropertyRepository
        class PropertyFinance {
            + calculateRentalIncome(): double
            + calculateAppreciation(): double
        }
        class PropertyState {
            + transitionState(newState: String): void
            + checkFundingDeadline(): boolean
            + isFullyFunded(): boolean
        }
        class Property {
          - id: UUID
          - name: String
          - type: String
          - price: double
          - fundingDeadline: Date
          - fundingStatus: String
          + PropertyFinance finance
          + PropertyState state
        }
    }

    package "Investment Service" {
        class InvestmentService {
            + allocateInvestment(user: User, property: Property, amount: double): boolean
            + listInvestmentsByUser(userId: UUID): List<Investment>
            + validateInvestmentLimits(user: User, amount: double): boolean
        }
        class InvestmentRepository
        class Investment {
          - id: UUID
          - property: Property
          - user: User
          - sharePercentage: double
          - investmentAmount: double
          + calculateReturns(): double
          + refundToWallet(wallet: Wallet): void
          + validateInvestment(): boolean
        }
    }

    package "User Service" {
        class UserService {
            + validateRole(user: User, requiredRole: String): boolean
        }
        class UserRepository
        class User {
          - id: UUID
          - name: String
          - email: String
          - wallet: Wallet
          - role: String "agent | investor"
          + register(): void
          + login(): void
          + updateProfile(): void
        }
    }

    package "Wallet Service" {
        class WalletService {
            + credit(amount: double): void
            + debit(amount: double): void
            + refundInvestment(investmentId: UUID): void
        }
        class TransactionService {
            + listTransactions(userId: UUID): List<Transaction>
        }
        class WalletRepository
        class Wallet {
          - id: UUID
          - balance: double
          + transfer(amount: double, targetWallet: Wallet): void
        }
        class Transaction {
          - id: UUID
          - type: String "credit | debit"
          - amount: double
          - date: Date
        }
    }

    package "Notification Service" {
        interface NotificationChannel {
            + sendNotification(recipient: User, message: String): void
        }
        class FundingNotificationService implements NotificationChannel {
            + sendNotification(recipient: User, message: String): void
        }
        class IncomeNotificationService implements NotificationChannel {
            + sendNotification(recipient: User, message: String): void
        }
    }

    package "Payment Service" {
        interface PaymentGateway {
            + processPayment(amount: double): void
        }
        class StripePaymentGateway implements PaymentGateway {
            + processPayment(amount: double): void
        }
    }

    package "Certificate Service" {
        class CertificateService {
            + generateCertificate(user: User, property: Property): void
        }
        class CertificateRepository
        class Certificate {
          - id: UUID
          - property: Property
          - user: User
          - issuedDate: Date
        }
    }
}

' Relationships
PropertyController --> PropertyService
UserController --> UserService
InvestmentController --> InvestmentService
WalletController --> WalletService

PropertyService --> PropertyRepository
PropertyService --> PropertyFinance
PropertyService --> PropertyState
InvestmentService --> InvestmentRepository
InvestmentService --> PropertyService
InvestmentService --> CertificateService : issueCertificate()
UserService --> UserRepository
WalletService --> WalletRepository
CertificateService --> CertificateRepository
WalletService --> TransactionService : manageTransactions()

FundingNotificationService --> NotificationChannel
IncomeNotificationService --> NotificationChannel

WalletService --> PaymentGateway : processPayment()
WalletService --> InvestmentService : fundInvestment()
InvestmentService --> User : validateInvestmentLimits(user, amount)
WalletService --> Wallet : refundInvestment(investmentId)
PropertyService --> CertificateService : generateCertificate(user, property)

' Role validation
UserService --> PropertyService : validateRole(user, requiredRole)
UserService --> InvestmentService : validateRole(user, requiredRole)

@enduml
